Gtk-3.18: [Budgie-Desktop] Fix darken separator in applet list
When switching to dark variant, separators became too dark.

--- a/gtk-3.0/_3rd-party.scss
+++ b/gtk-3.0/_3rd-party.scss
@@ -169,6 +169,8 @@ $orientation: ((top, bottom),
       color: $selected_bg_color;
       &:hover { background-color: gtkopacity($selected_bg_color, 0.1); }
     }
+
+    .separator { color: gtkopacity($insensitive_fg_color, 0.55); }
   }
 
   // FIXME: why should I have to do so?
