--- a/gtk-3.0/gtk.css
+++ b/gtk-3.0/gtk.css
@@ -6729,6 +6729,15 @@ TerminalWindow .scrollbar.trough {
       column-header .raven .button:not(.list):selected:hover,
       .raven .activatable.tweak-category:not(.list):selected:hover {
         background-color: rgba(0, 188, 212, 0.1); }
+    .raven .list .separator,
+    .raven .list-row .separator,
+    .raven .tweak-category .separator,
+    .raven .list-row.activatable .separator,
+    .raven .view .separator,
+    .raven column-header .button .separator,
+    column-header .raven .button .separator,
+    .raven .activatable.tweak-category .separator {
+      color: rgba(38, 50, 56, 0.165); }
   .raven GtkSwitch {
     -GtkSwitch-slider-width: 40;
     -GtkSwitch-slider-height: 20;
